# tilat

./: .dockerignore  .env.dev.example  .env.example  .env.server.example  .gitignore  .oxlintrc.json  .prettierignore  AGENTS.md  LICENSE  README.md  compose.dev.yml  compose.server.yml  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: master-pr.yml
apps/api/: pyproject.toml
apps/api/config/: settings.py  urls.py
apps/api/reservations/: admin.py  apps.py  auth.py  models.py  permissions.py  schema.py  serializers.py  services.py  urls.py  views.py
apps/api/reservations/management/commands/: seed_demo.py
apps/api/reservations/migrations/: 0001_initial.py  0002_postgres_overlap_constraint.py  0003_password_auth.py  0004_rename_reservatio_resource_begin_idx_reservation_resourc_cf30eb_idx_and_more.py  0005_use_email_usernames.py  0006_reservation_forms.py
apps/api/tests/: conftest.py  test_admin.py  test_auth.py  test_domain.py  test_permissions.py  test_querysets.py  test_reservation_forms.py  test_seed_demo.py  test_settings.py  test_staff_api.py
apps/web/: next.config.mjs  package.json  playwright.config.ts  proxy.ts  tsconfig.json  vitest.config.ts
apps/web/app/: globals.css
apps/web/components/: ActionFeedbackForm.tsx  AuthForm.test.tsx  AuthForm.tsx  BookingForm.tsx  (+8 more)
docker/: api.Dockerfile  web.Dockerfile
docker/authentik/: reservation-mvp-blueprint.yaml
docker/caddy/: Caddyfile
specs/: accessibility.md  domain.md  i18n.md  permissions.md  product-mvp.md
specs/api/: openapi.yaml
specs/tasks/: initial-implementation.md
(+37 files in other folders)
