[project]
name = "reservation-api"
version = "0.1.0"
requires-python = "==3.14.*"
dependencies = [
  "Django==6.0.4",
  "djangorestframework==3.17.1",
  "django-filter==25.2",
  "drf-spectacular==0.29.0",
  "django-cors-headers==4.9.0",
  "psycopg[binary]==3.3.3",
  "PyJWT[crypto]==2.12.1",
  "gunicorn==25.3.0",
]

[dependency-groups]
dev = [
  "pytest==9.0.3",
  "pytest-django==4.12.0",
  "factory-boy==3.3.3",
  "freezegun==1.5.5",
  "ruff==0.15.11",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
